# project_diabete

./: .gitignore  README.md  STREAMLIT_CLOUD_CONFIG.md  create_sample_images.sh  init.sh  main.py  pyproject.toml
model/: drimdb_model.pth
pages/: st_page_predict_eyes.py
pages/utils/: load_images.py  predict.py  stream_function.py
