[project]
name = "project-diabete"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "kagglehub>=0.3.13",
    "pillow>=12.0.0",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]
